# useful

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: any.hpp  array_view.hpp  circular_iterator.hpp  dag.hpp  function_deduction.hpp  function_type_descriptor.hpp  handle_map.hpp  index_sort.hpp  integer_sequence.hpp  iterators.hpp  kd_tree.hpp  kdtree.hpp  member_iterator.hpp  member_variable_deduction.hpp  misc.hpp  point_traits.hpp  sfinae.hpp  sliding_window.hpp  small_vector.hpp  soa.hpp  stable_container.hpp  static_json.hpp  tags  tree.hpp  type_descriptor.hpp  type_list.hpp  void_t.hpp
tests/: perftest.cpp  test_dag.cpp  test_ecs.cpp  test_index_sort.cpp  test_kd_tree.cpp  test_kdtree.cpp  test_point_traits.cpp
